Thu Nov  7 01:42:52 GMT 2002  Colin Watson  <cjwatson@debian.org>

	* docs/NEWS: Further updates for 2.4.1.
	* docs/ToDo: I think the new-style database is OK now.

Thu Nov  7 01:32:29 GMT 2002  Colin Watson  <cjwatson@debian.org>

	* src/globbing.c (match_in_directory): Don't use FNM_NOESCAPE flag
	  to fnmatch().
	  (look_for_file): Escape paths and names before passing them to
	  match_in_directory().
	* src/globbing.h: Update variable names in prototype.

Wed Oct 23 02:12:43 BST 2002  Colin Watson  <cjwatson@debian.org>

	* tools/README: Remove reference to install-manpage.

Wed Oct 23 02:10:15 BST 2002  Colin Watson  <cjwatson@debian.org>

	* tools/install-manpage: Remove. It doesn't work at all as far as I
	  can see, and at least as far as Debian is concerned dh_installman
	  does a better job.
	* GNUmakefile.in: Remove reference to install-manpage.

Wed Oct 23 02:03:18 BST 2002  Colin Watson  <cjwatson@debian.org>

	Apply proper copyright and licence notices to all source files.
	There are no functional changes here, either to the code or to the
	applicable licences, merely clarifications.

	* docs/COPYING.LIB: New file, containing version 2.1 of the GNU
	  LGPL.

Wed Oct 23 01:56:38 BST 2002  Colin Watson  <cjwatson@debian.org>

	* tools/install-sh: Update to the version in automake 1.4-p4, which
	  includes a full (MIT) licence notice.

Sat Oct 12 20:16:48 BST 2002  Colin Watson  <cjwatson@debian.org>

	A much-needed complete rewrite of splitline(). The previous version
	was extremely difficult to debug (see http://bugs.debian.org/123130)
	and got info->pointer and info->whatis wrong quite frequently. This
	version is much simpler and I hope more correct.

	* src/util.c (trim_spaces): New function.
	* include/manconfig.h.in: Prototype trim_spaces().

	* src/check_mandirs.c (gripe_bad_store): New function.
	  (splitline): Remove.
	  (parse_descriptions, store_descriptions, free_descriptions): New